--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -59,7 +59,7 @@
     <meta name="twitter:site" content="@NewAmerica">
   {% endif %}
 
-  {% if page.archived_page or page.no_index_page %}
+  {% if page.archived_page or page.no_index_page or page|model_name == 'home.ProjectRequests' %}
   <meta name="robots" content="noindex, nofollow">
   {% endif %}
 
