--- a/newamericadotorg/assets/scss/components/icons/_social.scss
+++ b/newamericadotorg/assets/scss/components/icons/_social.scss
@@ -35,6 +35,17 @@
         &:hover {
             color: color(turquoise, dark);
         }
+
+        @include media-breakpoint-down(desktop) {
+            display: block;
+        }
+    }
+
+    @include media-breakpoint-down(desktop) {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        margin-bottom: 25px;
     }
 }
 
