--- a/newamericadotorg/templates/components/post_heading_text.html
+++ b/newamericadotorg/templates/components/post_heading_text.html
@@ -14,7 +14,7 @@
   {% if page.subheading %}
     <h6 class="subheading">{{ page.subheading }}</h6>
   {% endif %}
-  {% if page|model_name != 'home.OrgSimplePage' and page|model_name != 'home.ProgramSimplePage' and page|model_name != 'other_content.FullPageEmbed' %}
+  {% if page|model_name != 'home.OrgSimplePage' and page|model_name != 'home.ProgramSimplePage' and page|model_name != 'other_content.FullPageEmbed' and page|model_name != 'home.ProjectRequests' %}
     <h5>{% firstof page.other_content_type.singular_title page|model_display_name %}{% if page.source %} in {{ page.source }}{% endif %}</h5>
   {% endif %}
   {% if page.source %}
