--- a/home/templates/home/project_requests.html
+++ b/home/templates/home/project_requests.html
@@ -4,18 +4,39 @@
 {% load wagtailimages_tags %}
 {% load utilities %}
 
-{% block extra_js %}
-	{% if page.data_project_external_script %}
-		{% include 'in_depth/style-shim.html' %}
-		<script type="text/javascript" src="https://na-data-projects.s3.amazonaws.com/projects/{{ page.data_project_external_script }}"></script>
-	{% endif %}
-{% endblock %}
-
 {% block body_id %}na-post{% endblock %}
 
 {% block content %}
-	{% block breadcrumbs %}
-		{% include 'components/breadcrumbs.html' %}
-	{% endblock %}
-	{% include 'components/post_main.html' %}
+    <main class="post container margin-35 project-requests margin-lg-80">
+		<div class="project-requests-container margin-bottom-25">
+			<h1 class="margin-top-0">
+				{% firstof custom_title page.title %}
+			</h1>
+			
+			{% if page.intro_paragraph %}
+				<p>{{ page.intro_paragraph }}</p>
+			{% endif %}
+
+			<div class="project-form-links">
+				{% for post in posts %}
+					<a class="project-form-link" href="{{ post.url }}">
+						<div class="form-link-left">
+							<div class="link-svg">
+								{% if post.svg_code %}
+									{{ post.svg_code|richtext }}
+								{% else %}
+									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path stroke="#333" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 22h14a1 1 0 0 0 1-1V7h-5V2H5a1 1 0 0 0-1 1v18a1 1 0 0 0 1 1ZM15 2l5 5"/><path stroke="#333" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m10.5 17.5 5-5-2-2-5 5v2h2Z"/></svg>
+								{% endif %}
+							</div>
+							<h2 class="form-title">{{ post.title }}</h2>
+						</div>
+						<div class="arrow-icon">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"><path stroke="#333" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9.5 6 6 6-6 6"/></svg>
+						</div>
+					</a>
+				{% endfor %}
+			</div>
+		</div>
+    </main>
+
 {% endblock %}
