--- a/newamericadotorg/assets/scss/pages/conference/_sections.scss
+++ b/newamericadotorg/assets/scss/pages/conference/_sections.scss
@@ -2,7 +2,14 @@
   padding-top: 80px;
   padding-bottom: 80px;
 
-  & > h1 {
-    margin-bottom: 60px;
+  .subtitle {
+    margin: 0 auto;
+    margin-top: 24px;
+    text-align: center;
+    max-width: 650px;
   }
+}
+
+.conference__section-title {
+  margin-bottom: 60px;
 }
