more story_image bug fixes

--- a/newamericadotorg/templates/components/card_lg.html
+++ b/newamericadotorg/templates/components/card_lg.html
@@ -2,7 +2,8 @@
 {% load wagtailimages_tags %}
 {% load utilities %}
 
-{% image post.story_image fill-925x430 as post_image_lg %}
+<!-- {% image post.story_image fill-925x430 as post_image_lg %} -->
+{% image post.story_image fill-1600x744 as post_image_lg %}
 {% image post.story_image fill-32x15 as post_image_thumb %}
 
 <div class="card lg">
