adding static dataviz

--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -143,6 +143,8 @@
       {# Override this in templates to add extra javascript #}
   {% endblock %}
 
+  <script type="text/javascript" src="https://na-graphics.s3.us-west-2.amazonaws.com/heightListener.js"></script>
+
   <!-- Twitter universal website tag code -->
   <script>
   !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
