report changes for oti - wireless future

--- a/report/templates/report/report.html
+++ b/report/templates/report/report.html
@@ -20,5 +20,5 @@
 {% endblock %}
 
 {% block content %}
-  <div id="na-react__report" data-report-id="{{page.id}}"></div>
+  <div id="na-react__report" data-report-id="{{page.id}}" data-page-slug="{{page.slug}}"></div>
 {% endblock %}
