cover images for fellows

--- a/newamericadotorg/assets/scss/pages/post/_heading.scss
+++ b/newamericadotorg/assets/scss/pages/post/_heading.scss
@@ -35,6 +35,6 @@
 
 
 .policypaperpage .post-heading__text,
-.bookpage .post-heading__text{
+.bookpage .post-heading__text, .podcast .post-heading__text {
   text-align: center;
 }
