--- a/podcast/templates/podcast/podcast.html
+++ b/podcast/templates/podcast/podcast.html
@@ -1,1 +1,6 @@
 {% extends "post_page.html" %}
+
+{% block body_class %}podcast{% endblock %}
+{% block post-header %}
+	{% include 'components/post_book_heading.html' %}
+{% endblock %}
