--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -45,7 +45,7 @@
   <meta name="twitter:description" content="{% firstof page.search_description page.story_excerpt %}" />
 
 
-  {% if page.social_sharing_image %}
+  {% if page.social_sharing_image or page.story_image %}
     {% image page.social_sharing_image fill-1200x630 as social %}
     <meta property="og:image" content="{{ social.file.url }}" />
     <meta name="twitter:image" content="{{ social.file.url }}" />
