--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -45,8 +45,14 @@
   <meta name="twitter:description" content="{% firstof page.search_description page.story_excerpt %}" />
 
 
-  {% if page.social_sharing_image or page.story_image %}
+  {% if page.social_sharing_image %}
     {% image page.social_sharing_image fill-1200x630 as social %}
+    <meta property="og:image" content="{{ social.file.url }}" />
+    <meta name="twitter:image" content="{{ social.file.url }}" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@NewAmerica">
+  {% else %} 
+    {% image page.story_image fill-1200x630 as social %}
     <meta property="og:image" content="{{ social.file.url }}" />
     <meta name="twitter:image" content="{{ social.file.url }}" />
     <meta name="twitter:card" content="summary_large_image">
